--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -1370,13 +1370,23 @@
           // ✅ LOGIQUE CORRIGÉE : Ordre chronologique des vérifications
           // On s'arrête à la première condition vraie
 
+          console.log('🔒 DEBUG - Début des vérifications de verrouillage')
+          console.log('🔒 DEBUG - cancelStatus:', data.cancelStatus)
+          console.log('🔒 DEBUG - status:', data.status)
+          console.log('🔒 DEBUG - endDate:', data.endDate)
+
           // 1. Vérifier si la réservation a expiré (priorité absolue)
           if (data.endDate) {
             const endDate = new Date(data.endDate)
             const today = new Date()
             today.setHours(0, 0, 0, 0) // Remettre à minuit pour la comparaison
 
+            console.log(
+              '🔒 DEBUG - Vérification 1: endDate < today ?',
+              endDate < today
+            )
             if (endDate < today) {
+              console.log('🔒 DEBUG - Condition 1 vraie: Réservation expirée')
               lockText.textContent =
                 t?.locks?.reservation_expired || 'Votre réservation a expiré'
               lock.style.display = 'flex'
@@ -1386,15 +1396,25 @@
 
           // 2. Vérifier si la réservation est annulée
           const cancelStatus = String(data.cancelStatus || '')
+          console.log(
+            '🔒 DEBUG - Vérification 2: cancelStatus === validated ?',
+            cancelStatus === 'validated'
+          )
           if (cancelStatus === 'validated') {
+            console.log('🔒 DEBUG - Condition 2 vraie: Réservation annulée')
             lockText.textContent =
               t?.locks?.reservation_canceled || 'Réservation annulée'
             lock.style.display = 'flex'
             return // On s'arrête ici
           }
 
-          // 3. Vérifier si l'annulation est en cours
+          // 3. Vérifier si l'annulation est en cours (PRIORITÉ ABSOLUE)
+          console.log(
+            '🔒 DEBUG - Vérification 3: cancelStatus === pending ?',
+            cancelStatus === 'pending'
+          )
           if (cancelStatus === 'pending') {
+            console.log('🔒 DEBUG - Condition 3 vraie: Annulation en cours')
             lockText.textContent =
               t?.locks?.cancellation_pending ||
               "Votre réservation fait l'objet d'une demande d'annulation"
@@ -1404,7 +1424,14 @@
 
           // 4. Vérifier si l'acompte et le solde sont déjà réglés
           const st = String(data.status || '')
+          console.log(
+            '🔒 DEBUG - Vérification 4: status === balancePay ?',
+            st === 'balancePay'
+          )
           if (st === 'balancePay') {
+            console.log(
+              '🔒 DEBUG - Condition 4 vraie: Acompte et solde déjà réglés'
+            )
             lockText.textContent =
               t?.locks?.balance_paid || 'Acompte et solde déjà réglés'
             lock.style.display = 'flex'
@@ -1412,7 +1439,12 @@
           }
 
           // 5. Vérifier si l'acompte est déjà réglé
+          console.log(
+            '🔒 DEBUG - Vérification 5: status === depositPay ?',
+            st === 'depositPay'
+          )
           if (st === 'depositPay') {
+            console.log('🔒 DEBUG - Condition 5 vraie: Acompte déjà réglé')
             lockText.textContent =
               t?.locks?.deposit_paid || 'Acompte déjà réglé'
             lock.style.display = 'flex'
@@ -1420,6 +1452,7 @@
           }
 
           // Si aucune condition n'est vraie, pas de verrouillage
+          console.log("🔒 DEBUG - Aucune condition de verrouillage n'est vraie")
           lock.style.display = 'none'
         }
       }
