MAJ Guide anglais

--- a/public/guide-pratique.html
+++ b/public/guide-pratique.html
@@ -41,7 +41,7 @@
         font-style: normal;
       }
     </style>
-    <script src="assets/js/guide.js" defer></script>
+    <script src="assets/js/guide-loader.js" defer></script>
   </head>
   <body>
     <div class="guide-container">
@@ -55,7 +55,7 @@
                 alt="Calypso Bay"
                 class="guide-logo-icon"
               />
-              <div class="guide-logo-text">Guide Calypso Bay</div>
+              <div class="guide-logo-text">Guide</div>
             </div>
             <button class="guide-menu-button" onclick="toggleMenu()">
               <i class="fas fa-bars"></i>
