--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 			"@id": "https://www.calypso-bay.com/#rental",
 			"name": "Calypso Bay",
 			"description": "Villa de luxe en bois de 180m² avec piscine privée, vue imprenable sur la mer, les îlets Pigeon et la réserve Cousteau",
+			"logo": "https://www.calypso-bay.com/images/logos/favicons/android-chrome-512x512.png"
 			"image": [
 				"https://www.calypso-bay.com/images/pic01.webp",
 				"https://www.calypso-bay.com/images/pic02.webp",
@@ -80,11 +81,11 @@
 		</script>
 
 		<!-- Favicons -->
-		<link rel="apple-touch-icon" sizes="180x180" href="images/logos/favicons/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="images/logos/favicons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="images/logos/favicons/favicon-16x16.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://www.calypso-bay.com/images/logos/favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://www.calypso-bay.com/images/logos/favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="https://www.calypso-bay.com/images/logos/favicons/favicon-16x16.png">
+		<link rel="shortcut icon" href="https://www.calypso-bay.com/images/logos/favicons/favicon.ico">
 		<link rel="manifest" href="manifest.json">
-		<link rel="shortcut icon" href="images/logos/favicons/favicon.ico">
 
 		<!-- Balises multilingues pour le SEO -->
 		<link rel="alternate" hreflang="fr" href="https://www.calypso-bay.com/" />
