--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 			"@id": "https://www.calypso-bay.com/#rental",
 			"name": "Calypso Bay",
 			"description": "Villa de luxe en bois de 180m² avec piscine privée, vue imprenable sur la mer, les îlets Pigeon et la réserve Cousteau",
-			"logo": "https://www.calypso-bay.com/images/logos/favicons/android-chrome-512x512.png"
+			"logo": "https://www.calypso-bay.com/images/logos/favicons/android-chrome-512x512.png",
 			"image": [
 				"https://www.calypso-bay.com/images/pic01.webp",
 				"https://www.calypso-bay.com/images/pic02.webp",
