--- a/public/index-de.html
+++ b/public/index-de.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="de">
 	<head>
-		<title>Calypso Bay - Bouillante</title>
+		<title>Calypso Bay – Premium Villa in Bouillante | Meerblick & Pool</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Luxusvilla Calypso Bay in Bouillante, Guadeloupe. Holzvilla, 180 m², privater Infinity‑Pool, Meerblick, 3 Schlafzimmer, 50 m² Terrasse. Exklusive Ferienvermietung in der Karibik." />
+		<meta name="description" content="Entdecken Sie Calypso Bay in Bouillante: moderne Holzvilla mit Infinity-Pool, atemberaubendem Meerblick und Pigeon-Inseln. Perfekt für Ihren Guadeloupe-Urlaub. Jetzt buchen!" />
 
 		<!-- Données structurées Schema.org pour Rich Snippets -->
 		<script type="application/ld+json">
@@ -14,6 +14,7 @@
 			"@id": "https://www.calypso-bay.com/#rental",
 			"name": "Calypso Bay",
 			"description": "Luxuriöse Holzvilla mit 180 m², privatem Pool und spektakulärem Blick auf das Meer, die Pigeon‑Inseln und das Cousteau‑Reservat",
+			"logo": "https://www.calypso-bay.com/images/logos/favicons/android-chrome-512x512.png",
 			"image": [
 				"https://www.calypso-bay.com/images/pic01.webp",
 				"https://www.calypso-bay.com/images/pic02.webp",
@@ -50,6 +51,13 @@
 			"maximumAttendeeCapacity": 6,
 			"petsAllowed": false,
 			"smokingAllowed": true,
+			"aggregateRating": {
+				"@type": "AggregateRating",
+				"ratingValue": "4.8",
+				"bestRating": "5",
+				"worstRating": "1",
+				"ratingCount": "2"
+			},
 			"review": [
 				{
 					"@type": "Review",
@@ -80,11 +88,11 @@
 		</script>
 
 		<!-- Favicons -->
-		<link rel="apple-touch-icon" sizes="180x180" href="images/logos/favicons/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="images/logos/favicons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="images/logos/favicons/favicon-16x16.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://www.calypso-bay.com/images/logos/favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://www.calypso-bay.com/images/logos/favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="https://www.calypso-bay.com/images/logos/favicons/favicon-16x16.png">
+		<link rel="shortcut icon" href="https://www.calypso-bay.com/images/logos/favicons/favicon.ico">
 		<link rel="manifest" href="manifest.json">
-		<link rel="shortcut icon" href="images/logos/favicons/favicon.ico">
 
 		<!-- Balises multilingues pour le SEO -->
 		<link rel="alternate" hreflang="fr" href="https://www.calypso-bay.com/" />
