--- a/public/index-en.html
+++ b/public/index-en.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Calypso Bay - Bouillante</title>
+		<title>Calypso Bay – Premium Villa in Bouillante | Sea View & Pool</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Calypso Bay luxury villa in Bouillante, Guadeloupe. Timber villa, 180m², private infinity pool, sea view, 3 bedrooms, 50m² terrace. Premium Caribbean holiday rental." />
+		<meta name="description" content="Discover Calypso Bay in Bouillante: modern timber villa with infinity pool, breathtaking sea view and Pigeon Islands. Perfect for your Guadeloupe vacation. Book now!" />
 
 		<!-- Données structurées Schema.org pour Rich Snippets -->
 		<script type="application/ld+json">
@@ -14,6 +14,7 @@
 			"@id": "https://www.calypso-bay.com/#rental",
 			"name": "Calypso Bay",
 			"description": "Luxury timber villa of 180 m² with private pool and breathtaking views of the sea, Pigeon Islets and the Cousteau Reserve",
+			"logo": "https://www.calypso-bay.com/images/logos/favicons/android-chrome-512x512.png",
 			"image": [
 				"https://www.calypso-bay.com/images/pic01.webp",
 				"https://www.calypso-bay.com/images/pic02.webp",
@@ -50,6 +51,13 @@
 			"maximumAttendeeCapacity": 6,
 			"petsAllowed": false,
 			"smokingAllowed": true,
+			"aggregateRating": {
+				"@type": "AggregateRating",
+				"ratingValue": "4.8",
+				"bestRating": "5",
+				"worstRating": "1",
+				"ratingCount": "2"
+			},
 			"review": [
 				{
 					"@type": "Review",
@@ -80,11 +88,11 @@
 		</script>
 
 		<!-- Favicons -->
-		<link rel="apple-touch-icon" sizes="180x180" href="images/logos/favicons/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="images/logos/favicons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="images/logos/favicons/favicon-16x16.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://www.calypso-bay.com/images/logos/favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://www.calypso-bay.com/images/logos/favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="https://www.calypso-bay.com/images/logos/favicons/favicon-16x16.png">
+		<link rel="shortcut icon" href="https://www.calypso-bay.com/images/logos/favicons/favicon.ico">
 		<link rel="manifest" href="manifest.json">
-		<link rel="shortcut icon" href="images/logos/favicons/favicon.ico">
 
 		<!-- Balises multilingues pour le SEO -->
 		<link rel="alternate" hreflang="fr" href="https://www.calypso-bay.com/" />
