--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<title>Calypso Bay - Bouillante</title>
+		<title>Calypso Bay – Villa de Standing à Bouillante | Vue Mer & Piscine</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Villa de luxe Calypso Bay à Bouillante, Guadeloupe. Villa bois 180m² avec piscine privée, vue mer, 3 chambres, terrasse 50m². Location vacances de standing aux Antilles." />
+		<meta name="description" content="Découvrez Calypso Bay à Bouillante : villa bois moderne avec piscine à débordement, vue imprenable sur la mer et les îlets Pigeon. Idéal pour vos vacances en Guadeloupe. Réservez dès maintenant !" />
 
 		<!-- Données structurées Schema.org pour Rich Snippets -->
 		<script type="application/ld+json">
@@ -51,6 +51,13 @@
 			"maximumAttendeeCapacity": 6,
 			"petsAllowed": false,
 			"smokingAllowed": true,
+			"aggregateRating": {
+				"@type": "AggregateRating",
+				"ratingValue": "4.8",
+				"bestRating": "5",
+				"worstRating": "1",
+				"ratingCount": "2"
+			},
 			"review": [
 				{
 					"@type": "Review",
