--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 			"@context": "https://schema.org",
 			"@type": "VacationRental",
 			"@id": "https://www.calypso-bay.com/#rental",
+			"identifier": "calypso-bay-97125",
+			"additionalType": "https://schema.org/VacationRental",
 			"name": "Calypso Bay",
 			"description": "Villa de luxe en bois de 180m² avec piscine privée, vue imprenable sur la mer, les îlets Pigeon et la réserve Cousteau",
 			"logo": "https://www.calypso-bay.com/images/logos/favicons/android-chrome-512x512.png",
@@ -32,6 +34,10 @@
 				"@type": "GeoCoordinates",
 				"latitude": 16.1300,
 				"longitude": -61.7683
+			},
+			"containsPlace": {
+				"@type": "Place",
+				"name": "Bouillante, Guadeloupe"
 			},
 			"amenityFeature": [
 				{"@type": "LocationFeatureSpecification","name":"Piscine privée","value":true},
@@ -64,14 +70,16 @@
 					"reviewRating": {"@type":"Rating","ratingValue":"4.92","bestRating":"5","worstRating":"1"},
 					"author": {"@type":"Organization","name":"Airbnb"},
 					"reviewBody": "Villa exceptionnelle avec vue imprenable sur la mer",
-					"url": "https://www.airbnb.fr/rooms/718692761956767082"
+					"url": "https://www.airbnb.fr/rooms/718692761956767082",
+					"datePublished": "2025-09-06"
 				},
 				{
 					"@type": "Review",
 					"reviewRating": {"@type":"Rating","ratingValue":"9.5","bestRating":"10","worstRating":"1"},
 					"author": {"@type":"Organization","name":"Booking.com"},
 					"reviewBody": "Villa de luxe avec équipements de qualité",
-					"url": "https://www.booking.com/hotel/gp/calypso-bay.fr.html"
+					"url": "https://www.booking.com/hotel/gp/calypso-bay.fr.html",
+					"datePublished": "2025-09-06"
 				}
 			],
 			"url": "https://www.calypso-bay.com",
